<resources>
    <string name="app_name">Schools at Uzhhorod Region</string>

    <string name="action_show_notification">Show notifications</string>
    <string name="action_refresh">Refresh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="call_text">Dial</string>
    <string name="send_sms_text">Send SMS</string>
    <string name="send_email_text">Send E-mail</string>

    <string name="via">via</string>

    <string name="error_no_contanct_data">No contact data.</string>
    <string name="error_no_internet">No internet connection.</string>
    <string name="error_cannot_load_contact">Cannot load contact data.</string>
    <string name="error_cannot_load_title">Cannot load title.</string>
    <string name="error_cannot_write_data">Cannot write data to Database.</string>
    <string name="error_at_parsing">Unknown error at Parsing.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_database_unavailable">Database is not available.</string>

    <string name="school_shishlivtsi">Shyshlivska School I-III dg.</string>
    <string name="school_kontsivska">Kontsivska School I-III dg.</string>
    <string name="school_onokivska">Onokivska School I-III dg.</string>
    <string name="school_surtivska">Syurtivska School I-III dg.</string>
    <string name="school_esenska">Esenska School I-III dg.</string>
    <string name="school_malodobronska">Malodobronska School I-III dg.</string>
    <string name="school_velikolazivska">Velykolazivska School I-III dg.</string>
    <string name="school_storozhnitska">Storozhnytska School I-III dg.</string>
    <string name="licey_velikodobronska">Velykodobronskiy lyceum</string>
    <string name="school_kamyanitska">Kam\'yanytska School I-III dg.</string>
    <string name="school_ruskokomarivska">Ruskokomarivska School I-III dg.</string>
    <string name="school_velikoheevetska">Velykogeyevetska School I-III dg.</string>
    <string name="school_velikodobronska">Velykodobronska School I-III dg.</string>
    <string name="school_rativetska">Rativetska School I-II dg.</string>
    <string name="school_tisaashvanska">Tysaashvanska ЗОШ I-II dg.</string>
    <string name="school_serednanska">Serednyanska School I-III dg.</string>
    <string name="school_koritnanska">Korytnyanska School I-III dg.</string>
    <string name="school_chernivskoi">Chervonivskoyi School I-III dg.</string>
    <string name="school_maloheevetska">Malogeyevetska School I-III dg.</string>
    <string name="school_palad_komarivetska">Palad-Komarivetska School I-II dg.</string>
    <string name="school_hudlivska">Khudlivska School I-III dg.</string>
    <string name="school_kiblarivska">Kyblyarivska School I-II dg.</string>
    <string name="school_solovkivska">Solovkivska School I-II dg.</string>
    <string name="school_kholmkivksa">Kholmkivska School I-II dg.</string>
    <string name="school_solomonivska">Solomonivska School I-II dg.</string>
    <string name="mon_gov">Ministry of Education and Science of Ukraine</string>
    <string name="metodkab">Information portal of the Education, Youth and Sports</string>

    <string name="site_school_shishlivtsi">http://sislivskazos.at.ua</string>
    <string name="site_school_kontsivska">http://koncovo-school.at.ua</string>
    <string name="site_school_onokivska">http://onokivcishkola.ucoz.ua</string>
    <string name="site_school_surtivska">http://surtivska-zos.ucoz.ua</string>
    <string name="site_school_esenska">http://esenska-zos.ucoz.ua</string>
    <string name="site_school_malodobronska">http://kki.at.ua</string>
    <string name="site_school_velikolazivska">http://vlschool.ucoz.ua</string>
    <string name="site_school_storozhnitska">http://storoznica.ucoz.net</string>
    <string name="site_licey_velikodobronska">http://dobronyigimi.at.ua</string>
    <string name="site_school_kamyanitska">http://kamjanytsa-zosh.at.ua</string>
    <string name="site_school_ruskokomarivska">http://rkomshkola.ucoz.ua</string>
    <string name="site_school_velikoheevetska">http://vgeevecka-zos.at.ua</string>
    <string name="site_school_velikodobronska">http://www.veldobronzos.com</string>
    <string name="site_school_rativetska">http://rati-iskola.ucoz.ua</string>
    <string name="site_school_tisaashvanska">http://tisaasvanskazos.at.ua</string>
    <string name="site_school_serednanska">http://seredneschool.at.ua</string>
    <string name="site_school_koritnanska">http://korytnjanyskol.at.ua</string>
    <string name="site_school_chernivskoi">http://chervonivska.at.ua</string>
    <string name="site_school_maloheevetska">http://kisgejociiskola.at.ua</string>
    <string name="site_school_palad_komarivetska">http://pkomarivtsi-zos.at.ua</string>
    <string name="site_school_hudlivska">http://hudlivska-zos.at.ua</string>
    <string name="site_school_kiblarivska">http://kybliary-zosh.uz.sch.in.ua</string>
    <string name="site_school_solovkivska">http://www.solovkivskazos.com.ua</string>
    <string name="site_school_kholmkivksa">http://holmkivska-zos.at.ua</string>
    <string name="site_school_solomonivska">http://salamoniiskola.ucoz.net</string>
    <string name="site_mon_gov">http://mon.gov.ua/</string>
    <string name="site_metodkab">http://metodkab-uz.ucoz.ua/</string>

    <string name="phone_school_shishlivtsi">0312733443</string>
    <string name="phone_school_kontsivska">0312727054</string>
    <string name="phone_school_onokivska">0</string>
    <string name="phone_school_surtivska">0312735342</string>
    <string name="phone_school_esenska">716650</string>
    <string name="phone_school_malodobronska">380312715062</string>
    <string name="phone_school_velikolazivska">0</string>
    <string name="phone_school_storozhnitska">0</string>
    <string name="phone_licey_velikodobronska">380312714298</string>
    <string name="phone_school_kamyanitska">0312731642</string>
    <string name="phone_school_ruskokomarivska">0</string>
    <string name="phone_school_velikoheevetska">0312730125</string>
    <string name="phone_school_velikodobronska">0312714321</string>
    <string name="phone_school_rativetska">0312725842</string>
    <string name="phone_school_tisaashvanska">0</string>
    <string name="phone_school_serednanska">0</string>
    <string name="phone_school_koritnanska">0</string>
    <string name="phone_school_chernivskoi">0</string>
    <string name="phone_school_maloheevetska">0</string>
    <string name="phone_school_palad_komarivetska">0312735642</string>
    <string name="phone_school_hudlivska">0</string>
    <string name="phone_school_kiblarivska">0</string>
    <string name="phone_school_solovkivska">0</string>
    <string name="phone_school_kholmkivksa">0</string>
    <string name="phone_school_solomonivska">0</string>
    <string name="phone_mon_gov">0444813221</string>
    <string name="phone_metodkab">0</string>

    <string name="email_school_shishlivtsi">sisloc.iskola@gmail.com</string>
    <string name="email_school_kontsivska">koncivska-zos@meta.ua</string>
    <string name="email_school_onokivska">none</string>
    <string name="email_school_surtivska">szurtivska-zos@meta.ua</string>
    <string name="email_school_esenska">esenska-zos@meta.ua</string>
    <string name="email_school_malodobronska">kozepiskolakisdobrony@gmail.com</string>
    <string name="email_school_velikolazivska">none</string>
    <string name="email_school_storozhnitska">none</string>
    <string name="email_licey_velikodobronska">ndreflic@gmail.com</string>
    <string name="email_school_kamyanitska">kamjanicka-zos@meta.ua</string>
    <string name="email_school_ruskokomarivska">none</string>
    <string name="email_school_velikoheevetska">velikogeevcka-zos@meta.ua</string>
    <string name="email_school_velikodobronska">velikodobronska-zos@meta.ua</string>
    <string name="email_school_rativetska">rativecka-zos@meta.ua</string>
    <string name="email_school_tisaashvanska">none</string>
    <string name="email_school_serednanska">none</string>
    <string name="email_school_koritnanska">none</string>
    <string name="email_school_chernivskoi">none</string>
    <string name="email_school_maloheevetska">none</string>
    <string name="email_school_palad_komarivetska">palagy-komarivci-zos@meta.ua</string>
    <string name="email_school_hudlivska">none</string>
    <string name="email_school_kiblarivska">none</string>
    <string name="email_school_solovkivska">none</string>
    <string name="email_school_kholmkivksa">none</string>
    <string name="email_school_solomonivska">none</string>
    <string name="email_mon_gov">mon@mon.gov.ua</string>
    <string name="email_metodkab">none</string>

</resources>
