<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mechanic_pc.uzhgorodschools._activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"
        android:id="@+id/include" />
    <LinearLayout
        android:id="@+id/layoutFabSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_above="@+id/fab"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini" />

        <android.support.v7.widget.CardView
            android:id="@+id/textField1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/cvtSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_email_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabSendSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSendSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_textsms_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini" />

        <android.support.v7.widget.CardView
            android:id="@+id/textField2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/cvtSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_sms_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_local_phone_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini" />

        <android.support.v7.widget.CardView
            android:id="@+id/textField3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/cvtCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="5dp"
                android:text="@string/call_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_contacts_black_24dp" />

    <ImageView
        android:id="@+id/splash_1"
        android:layout_width="53dp"
        android:layout_height="59dp"
        android:layout_gravity="bottom|right"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="top|left"
        android:src="@drawable/ic_arrow_upward_black_24dp" />

    <ImageView
        android:id="@+id/splash_0"
        android:layout_width="238dp"
        android:layout_height="304dp"
        android:layout_gravity="center_vertical|center_horizontal"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        app:srcCompat="@mipmap/yearbook" />


    <ImageView
        android:id="@+id/progress_back"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:layout_gravity="bottom|center_horizontal"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="top|center_horizontal"
        android:src="@drawable/ic_lens_progress_back_24dp"
        android:visibility="invisible">

    </ImageView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="invisible"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="top|center_horizontal"
        android:paddingTop="0.8dp"
        android:theme="@style/AppTheme.WhiteAccent" />
</android.support.design.widget.CoordinatorLayout>
